fixed links and images

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
                     <ul class="uk-navbar-nav">
                         <li class="uk-active"><a href="#">About</a></li>
-                        <li><a href="/photography.html">Photography</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/misc.html">Misc.</a></li>
+                        <li><a href="./photography.html">Photography</a></li>
+                        <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./misc.html">Misc.</a></li>
                     </ul>
 
                 </div>
@@ -46,7 +46,7 @@
                     <p></p>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <img class="uk-box-shadow-large" src="/src/images/about-page/me-skewer.jpg" alt="Image">
+                    <img class="uk-box-shadow-large" src="./src/images/about-page/me-skewer.jpg" alt="Image">
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                     <p>I am a business and computer science major at NYU. Although I'm now based in NYC, I call southern
                         california my home.</p>
                     <p>I love taking photos while discovering fun, new things to do and eat. Check out my photos
-                        <a href="/photography.html">here</a>.
+                        <a href="./photography.html">here</a>.
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
