--- a/misc.html
+++ b/misc.html
@@ -26,9 +26,9 @@
                 <div class="uk-navbar-center">
 
                     <ul class="uk-navbar-nav">
-                        <li><a href="/index.html">About</a></li>
-                        <li><a href="/photography.html">Photography</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
+                        <li><a href="./index.html">About</a></li>
+                        <li><a href="./photography.html">Photography</a></li>
+                        <li><a href="./projects.html">Projects</a></li>
                         <li class="uk-active"><a href="#">Misc.</a></li>
                     </ul>
 
@@ -40,7 +40,7 @@
                 <div class="uk-width-1-2@m uk-align-center">
                     <h1 class="uk-heading"><span uk-icon="bolt"></span> coming soon...</h1>
                 </div>
-                <img class="uk-box-shadow" src="/src/images/ryan.jpg" alt="Image">
+                <img class="uk-box-shadow" src="./src/images/ryan.jpg" alt="Image">
             </div>
 
             <!-- Socials -->
@@ -66,6 +66,6 @@
     </div>
 </body>
 
-<script src="src/js/main.js"></script>
+<script src="./src/js/main.js"></script>
 
 </html>
