--- a/photography.html
+++ b/photography.html
@@ -26,10 +26,10 @@
                 <div class="uk-navbar-center">
 
                     <ul class="uk-navbar-nav">
-                        <li><a href="/index.html">About</a></li>
+                        <li><a href="./index.html">About</a></li>
                         <li class="uk-active"><a href="#">Photography</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/misc.html">Misc.</a></li>
+                        <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./misc.html">Misc.</a></li>
                     </ul>
 
                 </div>
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <img class="uk-box-shadow-large" data-src="/src/images/photography-page/photos/misc/me.jpg"
+                    <img class="uk-box-shadow-large" data-src="./src/images/photography-page/photos/misc/me.jpg"
                         width="480" height="360" alt="" alt="Image" uk-img>
                 </div>
             </div>
@@ -59,87 +59,87 @@
                     <h1 class="uk-heading-line uk-text-center"><span>friends</span></h1>
                     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-2-rileygumbo.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-2-rileygumbo.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-2-valentines.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-2-valentines.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-darrenla.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-darrenla.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-sarahjustinmirror.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahjustinmirror.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2019-8-626sarah.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2019-8-626sarah.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-11-wenxihighline.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-11-wenxihighline.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-rileyla.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-rileyla.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-ryanportrait.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-ryanportrait.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-ryanriley.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-ryanriley.jpg"
+                                width="400" height="300" alt="" uk-img />
+                        </div>
+                        <div>
+                            <img data-src="./src/images/photography-page/photos/friends/2019-8-626alice.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2019-8-626alice.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-ryanrileychair.jpg"
+                                width="400" height="300" alt="" uk-img />
+                        </div>
+                        <div>
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-charissa.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-ryanrileychair.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-2-derekportrait.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-charissa.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-1-jessica.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-2-derekportrait.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2020-3-sarahgriffith.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-1-jessica.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahflowers.jpg"
+                                width="400" height="300" alt="" uk-img />
+                        </div>
+                        <div>
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahla.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2020-3-sarahgriffith.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahsunflower.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-sarahflowers.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-rachelbday.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-sarahla.jpg" width="400"
-                                height="300" alt="" uk-img />
-                        </div>
-                        <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-sarahsunflower.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-sunflowerfield.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-rachelbday.jpg"
-                                width="400" height="300" alt="" uk-img />
-                        </div>
-                        <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-sunflowerfield.jpg"
-                                width="400" height="300" alt="" uk-img />
-                        </div>
-                        <div>
-                            <img data-src="/src/images/photography-page/photos/friends/2021-5-sarahlapeace.jpg"
+                            <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahlapeace.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                     </div>
@@ -149,99 +149,99 @@
                     <h1 class="uk-heading-line uk-text-center"><span>new york city</span></h1>
                     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-aritzia.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-aritzia.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-chinatownnight1.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-chinatownnight1.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-chinatownnight2.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-chinatownnight2.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-chinatownnight3.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-chinatownnight3.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-flower.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-flower.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-governors.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-governors.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-governors2.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-governors2.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-governorsboat.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-governorsboat.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-governorshair.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-governorshair.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-governorsshoes.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-governorsshoes.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-lantern.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-lantern.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-nycmade.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-nycmade.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-pumpkins.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-pumpkins.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-soho1.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-soho1.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-soho2.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-soho2.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-sohogirl.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-sohogirl.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-10-taiwaneseflag.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-10-taiwaneseflag.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-11-empirestate.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-11-empirestate.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-12-dorm.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-12-dorm.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-9-wenxibridge.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-9-wenxibridge.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2020-9-wenxisquat.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2020-9-wenxisquat.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2021-2-rooseveltisland.jpg"
+                            <img data-src="./src/images/photography-page/photos/nyc/2021-2-rooseveltisland.jpg"
                                 width="400" height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2021-4-chinatownday.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2021-4-chinatownday.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/nyc/2021-5-gummies.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/nyc/2021-5-gummies.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
 
@@ -252,15 +252,15 @@
                     <h1 class="uk-heading-line uk-text-center"><span>los angeles</span></h1>
                     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                         <div>
-                            <img data-src="/src/images/photography-page/photos/la/2021-5-la.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/la/2021-5-la.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/la/2020-12-thesource.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/la/2020-12-thesource.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                         <div>
-                            <img data-src="/src/images/photography-page/photos/la/2021-5-littletokyo.jpg" width="400"
+                            <img data-src="./src/images/photography-page/photos/la/2021-5-littletokyo.jpg" width="400"
                                 height="300" alt="" uk-img />
                         </div>
                     </div>
@@ -292,6 +292,6 @@
     </div>
 </body>
 
-<script type="module" src="src/js/main.js"></script>
+<script type="module" src="./src/js/main.js"></script>
 
 </html>
