--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,10 @@
                 <div class="uk-navbar-center">
 
                     <ul class="uk-navbar-nav">
-                        <li><a href="/index.html">About</a></li>
-                        <li><a href="/photography.html">Photography</a></li>
+                        <li><a href="./index.html">About</a></li>
+                        <li><a href="./photography.html">Photography</a></li>
                         <li class="uk-active"><a href="#">Projects</a></li>
-                        <li><a href="/misc.html">Misc.</a></li>
+                        <li><a href="./misc.html">Misc.</a></li>
                     </ul>
 
                 </div>
@@ -40,7 +40,7 @@
                 <div class="uk-width-1-2@m uk-align-center">
                     <h1 class="uk-heading"><span uk-icon="bolt"></span> coming soon...</h1>
                 </div>
-                <img class="uk-box-shadow" src="/src/images/camera.jpg" alt="Image">
+                <img class="uk-box-shadow" src="./src/images/camera.jpg" alt="Image">
             </div>
 
             <!-- Socials -->
@@ -77,8 +77,9 @@
                     <p>For this project, I learned how to use Pug and Svelte.</p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
-                    <img class="uk-box-shadow-large" src="/src/images/project-page/boba-tracker/pug.jpeg" alt="Image">
-                    <img class="uk-box-shadow-large" src="/src/images/project-page/boba-tracker/svelte.png" alt="Image">
+                    <img class="uk-box-shadow-large" src="./src/images/project-page/boba-tracker/pug.jpeg" alt="Image">
+                    <img class="uk-box-shadow-large" src="./src/images/project-page/boba-tracker/svelte.png"
+                        alt="Image">
                 </div>
             </div>
             <div class="uk-flex-middle uk-margin-large-top" uk-grid>
@@ -89,7 +90,7 @@
                         the year.</p>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <img class="uk-box-shadow-large" src="/src/images/project-page/boba-tracker/spreadsheet.png"
+                    <img class="uk-box-shadow-large" src="./src/images/project-page/boba-tracker/spreadsheet.png"
                         alt="Image">
                 </div>
             </div>
@@ -114,7 +115,7 @@
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
-                    <img class="uk-box-shadow-large" src="/src/images/project-page/boba-tracker/spreadsheet.png"
+                    <img class="uk-box-shadow-large" src="./src/images/project-page/boba-tracker/spreadsheet.png"
                         alt="Image">
                 </div>
             </div>
@@ -130,17 +131,17 @@
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <img class="uk-box-shadow-large" src="/src/images/project-page/nyc-covid/nyc-covid.jpg" alt="Image">
+                    <img class="uk-box-shadow-large" src="./src/images/project-page/nyc-covid/nyc-covid.jpg"
+                        alt="Image">
                 </div>
             </div>
         </div>
     </div>
 
 
-    >>>>>>> 80f4e11ff82b02202de1304be70080bb31473a21
     </div>
 </body>
 
-<script src="src/js/main.js"></script>
+<script src="./src/js/main.js"></script>
 
 </html>
