updated photos page and added emojis

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- Bio -->
             <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
                 <div class="uk-width-1-2@m">
-                    <h1>justin zhao</h1>
+                    <h1> &#x1F365; justin zhao</h1>
                     <ul class="uk-list">
                         <li><span uk-icon="bolt"></span> NYU Stern c/o 2024</li>
                         <li><span uk-icon="home"></span> Orange County, CA</li>
@@ -53,7 +53,7 @@
             <!-- About -->
             <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <h1>about me</h1>
+                    <h1> &#x1F344; about me</h1>
                     <p>I am a business and computer science major at NYU. Although I'm now based in NYC, I call southern
                         california my home.</p>
                     <p>I love taking photos while discovering fun, new things to do and eat. Check out my photos
