--- a/misc.html
+++ b/misc.html
@@ -38,7 +38,7 @@
             <!-- Description -->
             <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
                 <div class="uk-width-1-2@m uk-align-center">
-                    <h1 class="uk-heading"><span uk-icon="bolt"></span> coming soon...</h1>
+                    <h1 class="uk-heading"> &#x23F3; coming soon...</h1>
                 </div>
                 <img class="uk-box-shadow" src="./src/images/ryan.jpg" alt="Image">
             </div>
