updated project page

--- a/projects.html
+++ b/projects.html
@@ -36,11 +36,57 @@
             </nav>
 
             <!-- Description -->
-            <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
-                <div class="uk-width-1-2@m uk-align-center">
-                    <h1 class="uk-heading"> &#x23F3; coming soon...</h1>
+            <div style="margin:auto" class="uk-container-small uk-flex-middle uk-margin-large-top" uk-grid>
+                <div class="uk-width-1-2@m">
+                    <h1>&#x1F41D; projects</h1>
+                    <p>Here are some of the personal projects I've made either to learn something or just for fun.</p>
                 </div>
-                <img class="uk-box-shadow" src="./src/images/camera.jpg" alt="Image">
+                <div class="uk-width-1-2@m uk-flex-first">
+                    <img class="uk-box-shadow-large" data-src="./src/images/project-page/pikachu-using-computer.jpeg"
+                        width="480" height="360" alt="" alt="Image" uk-img>
+                </div>
+            </div>
+
+            <!-- Project Gallery -->
+            <div class="uk-flex-middle uk-align-center uk-margin-xlarge-top" uk-grid>
+
+                <!-- COVID Tracker -->
+                <div class="uk-card uk-card-default uk-grid-collapse uk-padding" uk-grid>
+                    <div class="uk-width-1-2@m">
+                        <h3 class="uk-card-title">NYC COVID Tracker</h3>
+                        <p>During fall of 2020, New York required 2-week quarantines for travelers from designated
+                            'hotspot' states. However, the criteria for a 'hotspot' state was confusing and the list
+                            of 'hotspot' states changed every week. As a result, I made this tracker to show how
+                            close states were to being called a 'hotspot' in order to help NYU students make decisions
+                            about whether or not it was worth to go home for the holidays.
+                        </p>
+                    </div>
+                    <div class="uk-width-1-2@m uk-margin">
+                        <div class="uk-cover-container">
+                            <img src="./src/images/project-page/nyc-covid/screenshot.png" alt="" uk-cover>
+                            <canvas width="600" height="400"></canvas>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Boba Tracker -->
+                <div class="uk-card uk-card-default uk-grid-collapse uk-padding" uk-grid>
+                    <div class="uk-width-1-2@m uk-margin">
+                        <div class="uk-cover-container">
+                            <img src="./src/images/project-page/boba-tracker/new-entry.png" alt="" uk-cover>
+                            <canvas width="600" height="400"></canvas>
+                        </div>
+                    </div>
+                    <div class="uk-width-1-2@m">
+                        <h3 class="uk-card-title">Boba Tracker</h3>
+                        <p>One of my new year's resolutions for 2021 was to drink less boba. To do so, I made a webapp
+                            where I could track all the times I drank boba throughout 2021. It would tell me how much
+                            money I've spent, how many times I've drank boba, and when the last time I got it was. By
+                            doing so, I discourage myself from getting it too often and also get to see data about my
+                            favorite drinks and stores.
+                        </p>
+                    </div>
+                </div>
             </div>
 
             <!-- Socials -->
