--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <main id="swup" class="transition-fade">
 
         <!-- Main Body -->
-        <div class="uk-container uk-margin-large-bottom uk-container-small">
+        <div class="uk-container uk-margin-large-bottom uk-container">
 
             <!-- Nav -->
             <nav class="uk-navbar-container uk-navbar-transparent uk-margin-large-top" uk-navbar>
@@ -49,43 +49,87 @@
 
             <!-- Project Gallery -->
             <div class="uk-flex-middle uk-align-center uk-margin-xlarge-top" uk-grid>
-
-                <!-- COVID Tracker -->
-                <div class="uk-card uk-card-default uk-grid-collapse uk-padding" uk-grid>
-                    <div class="uk-width-1-2@m">
-                        <h3 class="uk-card-title">NYC COVID Tracker</h3>
-                        <p>During fall of 2020, New York required 2-week quarantines for travelers from designated
-                            'hotspot' states. However, the criteria for a 'hotspot' state was confusing and the list
-                            of 'hotspot' states changed every week. As a result, I made this tracker to show how
-                            close states were to being called a 'hotspot' in order to help NYU students make decisions
-                            about whether or not it was worth to go home for the holidays.
-                        </p>
+                <div class="uk-child-width-1-3@m" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default">
+                            <div class="uk-card-media-top">
+                                <img src="./src/images/project-page/nyc-covid/screenshot.png" height="280" alt="">
+                            </div>
+                            <div class="uk-card-body">
+                                <h3 class="uk-card-title">NY COVID Tracker</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt.</p>
+                            </div>
+                            <div class="uk-card-footer">
+                                <a href="#" class="uk-button uk-button-text">Read more</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="uk-width-1-2@m uk-margin">
-                        <div class="uk-cover-container">
-                            <img src="./src/images/project-page/nyc-covid/screenshot.png" alt="" uk-cover>
-                            <canvas width="600" height="400"></canvas>
+                    <div>
+                        <div class="uk-card uk-card-default">
+                            <div class="uk-card-media-top">
+                                <img src="./src/images/project-page/boba-tracker/thumbnail.png" alt="">
+                            </div>
+                            <div class="uk-card-body">
+                                <h3 class="uk-card-title">Boba Database</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt.</p>
+                            </div>
+                            <div class="uk-card-footer">
+                                <a href="#" class="uk-button uk-button-text">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default">
+                            <div class="uk-card-media-top">
+                                <img src="./src/images/project-page/boba-tracker/thumbnail.png" height="280" alt="">
+                            </div>
+                            <div class="uk-card-body">
+                                <h3 class="uk-card-title">Boba Database</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- Boba Tracker -->
-                <div class="uk-card uk-card-default uk-grid-collapse uk-padding" uk-grid>
-                    <div class="uk-width-1-2@m uk-margin">
-                        <div class="uk-cover-container">
-                            <img src="./src/images/project-page/boba-tracker/new-entry.png" alt="" uk-cover>
-                            <canvas width="600" height="400"></canvas>
-                        </div>
+            <!-- COVID Tracker -->
+            <div class="uk-card uk-card-default uk-grid-collapse uk-padding" uk-grid>
+                <div class="uk-width-1-2@m">
+                    <h3 class="uk-card-title">NYC COVID Tracker</h3>
+                    <p>During fall of 2020, New York required 2-week quarantines for travelers from designated
+                        'hotspot' states. However, the criteria for a 'hotspot' state was confusing and the list
+                        of 'hotspot' states changed every week. As a result, I made this tracker to show how
+                        close states were to being called a 'hotspot' in order to help NYU students make decisions
+                        about whether or not it was worth to go home for the holidays.
+                    </p>
+                </div>
+                <div class="uk-width-1-2@m uk-margin">
+                    <div class="uk-cover-container">
+                        <img src="./src/images/project-page/nyc-covid/screenshot.png" alt="" uk-cover>
+                        <canvas width="600" height="400"></canvas>
                     </div>
-                    <div class="uk-width-1-2@m">
-                        <h3 class="uk-card-title">Boba Tracker</h3>
-                        <p>One of my new year's resolutions for 2021 was to drink less boba. To do so, I made a webapp
-                            where I could track all the times I drank boba throughout 2021. It would tell me how much
-                            money I've spent, how many times I've drank boba, and when the last time I got it was. By
-                            doing so, I discourage myself from getting it too often and also get to see data about my
-                            favorite drinks and stores.
-                        </p>
+                </div>
+            </div>
+
+            <!-- Boba Tracker -->
+            <div class="uk-card uk-card-default uk-grid-collapse uk-padding" uk-grid>
+                <div class="uk-width-1-2@m uk-margin">
+                    <div class="uk-cover-container">
+                        <img src="./src/images/project-page/boba-tracker/new-entry.png" alt="" uk-cover>
+                        <canvas width="600" height="400"></canvas>
                     </div>
+                </div>
+                <div class="uk-width-1-2@m">
+                    <h3 class="uk-card-title">Boba Tracker</h3>
+                    <p>One of my new year's resolutions for 2021 was to drink less boba. To do so, I made a webapp
+                        where I could track all the times I drank boba throughout 2021. It would tell me how much
+                        money I've spent, how many times I've drank boba, and when the last time I got it was. By
+                        doing so, I discourage myself from getting it too often and also get to see data about my
+                        favorite drinks and stores.
+                    </p>
                 </div>
             </div>
 
